# SkillLoom

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/plans/: 2026-05-28-skillloom-roadmap.md
docs/reports/: 2026-05-28-implementation-report.md
prototype/: index.html
prototype/src/: app.jsx  data.js  palettes.js
src/: App.tsx  ipc.ts  palettes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  error.rs  main.rs  platforms.rs  repository_init.rs  routes.rs  skills.rs  watcher.rs
