[package]
name = "skillloom"
version = "0.1.0"
description = "Skill manager — central + symlink routing"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
humansize = "2"
once_cell = "1"
notify = "8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
